# http_server

./: .env  .gitignore  .gitmodules  CMakeLists.txt  Doxyfile  LICENSE  Makefile  README.md  compile_commands.json  cpplint.py  http_server  requests.txt
.cache/clangd/index/: log.hpp.9CDB268166564CF1.idx  main.cpp.E192482F4034A752.idx  router.cpp.1A3217B975EC680D.idx  router.hpp.D94B8C1D272B6CFD.idx  routes.cpp.1E11708D7E0AE21D.idx  server.cpp.F2B316304EC16A37.idx  server.hpp.F034E0AACD3A5167.idx  utils.hpp.925BAD0D2881F44C.idx
include/: cCallbacks.hpp  client.h  client.hpp  codec.h  codec.hpp  common.h  common.hpp  customers_table.h  customers_table_validator.h  database.h  database_client.h  database_handler.h  database_tables.h  framebuilder.hpp  framehandler.hpp  header_parser.h  header_validator.h  http2_frame_builder.h  http2_frame_handler.h  http2_request_handler.h  http3_frame_builder.h  http3_frame_handler.h  http3_request_handler.h  log.h  log.hpp  query_builder.h  query_validator.h  quic_client.h  quic_server.h  quicserver.hpp  router.h  router.hpp  routes.h  sCallbacks.hpp  server.h  server.hpp  static_content_handler.h  tcp_client.h  tcp_server.h  tcpclient.hpp  (+8 more)
proto/: database_service.proto
src/: cCallbacks.cpp  client.cc  client.cpp  codec.cc  codec.cpp  common.cc  common.cpp  customers_table.cc  customers_table_validator.cc  database.cc  database_client.cc  database_handler.cc  database_server.cc  database_tables.cc  framebuilder.cpp  framehandler.cpp  header_parser.cc  header_validator.cc  http2_frame_builder.cc  http2_frame_handler.cc  http2_request_handler.cc  http3_frame_builder.cc  http3_frame_handler.cc  http3_request_handler.cc  log.cc  log.cpp  main.cc  main.cpp  query_builder.cc  quic_client.cc  quic_server.cc  quicserver.cpp  router.cc  router.cpp  routes.cc  routes.cpp  sCallbacks.cpp  server.cc  server.cpp  static_content_handler.cc  (+10 more)
tests/: client_test.cc  customers_table_validator_test.cc  static_content_handler_test.cc
